--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon"/>
     <title>Digital Inventions</title>
 </head>
 <body style="font-family: Arial, sans-serif; text-align: center; margin-top: 20%;">
