--- a/index.html
+++ b/index.html
@@ -1,15 +1,362 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+<head lang="en">
     <meta charset="UTF-8">
-    <meta name="robots" content="noindex, nofollow">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon"/>
-    <title>Digital Inventions</title>
+    <!--Page Title-->
+    <title>Digital Inventions Consulting</title>
+
+    <!--Meta Keywords and Description-->
+    <meta name="keywords" content="">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+
+    <!--Favicon-->
+    <link rel="shortcut icon" href="images/favicon.ico" title="Favicon" />
+
+    <!-- Main CSS Files -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- Namari Color CSS -->
+    <link rel="stylesheet" href="css/namari-color.css">
+
+    <!--Icon Fonts - Font Awesome Icons-->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+
+    <!-- Animate CSS-->
+    <link href="css/animate.css" rel="stylesheet" type="text/css">
+
+    <!--Google Webfonts-->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+    <meta name="robots" content="noindex, nofollow">
 </head>
-<body style="font-family: Arial, sans-serif; text-align: center; margin-top: 20%;">
-    <h1>Welcome to the Future Home of Digital Inventions</h1>
-    <p>Our new site is launching soon!</p>
+<body>
+
+<!-- Preloader -->
+<div id="preloader">
+    <div id="status" class="la-ball-triangle-path">
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+</div>
+<!--End of Preloader-->
+
+<div class="page-border" data-wow-duration="0.7s" data-wow-delay="0.2s">
+    <div class="top-border wow fadeInDown animated" style="visibility: visible; animation-name: fadeInDown;"></div>
+    <div class="right-border wow fadeInRight animated" style="visibility: visible; animation-name: fadeInRight;"></div>
+    <div class="bottom-border wow fadeInUp animated" style="visibility: visible; animation-name: fadeInUp;"></div>
+    <div class="left-border wow fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;"></div>
+</div>
+
+<div id="wrapper">
+
+    <header id="banner" class="scrollto clearfix" data-enllax-ratio=".5">
+        <div id="header" class="nav-collapse">
+            <div class="row clearfix">
+                <div class="col-1">
+
+                    <!--Logo-->
+                    <div id="logo">
+
+                        <!--Logo that is shown on the banner-->
+                        <img src="images/logo.png" id="banner-logo" alt="Landing Page"/>
+                        <!--End of Banner Logo-->
+
+                        <!--The Logo that is shown on the sticky Navigation Bar-->
+                        <img src="images/logo-2.png" id="navigation-logo" alt="Landing Page"/>
+                        <!--End of Navigation Logo-->
+
+                    </div>
+                    <!--End of Logo-->
+
+                    <aside>
+
+                        <!--Social Icons in Header-->
+                        <ul class="social-icons">
+                            <li>
+                                <a target="_blank" title="Twitter" href="https://wa.me/+27609880017">
+                                    <i class="fa fa-whatsapp fa-1x"></i><span>Whatsapp</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" title="Telephone" href="tel:+27609880017">
+                                    <i class="fa fa-phone fa-1x"></i><span>Telephone</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a target="_blank" title="Email" href="mailto:info@digitalinventions.co.za">
+                                    <i class="fa fa-envelope fa-1x"></i><span>Email</span>
+                                </a>
+                            </li>
+                        </ul>
+                        <!--End of Social Icons in Header-->
+
+                    </aside>
+
+                    <!--Main Navigation-->
+                    <nav id="nav-main">
+                        <ul>
+                            <li>
+                                <a href="#banner">Home</a>
+                            </li>
+                            <li>
+                                <a href="#about">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#services">Our Approach</a>
+                            </li>
+                            <li>
+                                <a href="#services">Our Services</a>
+                            </li>
+                            <li>
+                                <a href="#contact">Work with Us</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <!--End of Main Navigation-->
+
+                    <div id="nav-trigger"><span></span></div>
+                    <nav id="nav-mobile"></nav>
+
+                </div>
+            </div>
+        </div><!--End of Header-->
+
+        <!--Banner Content-->
+        <div id="banner-content" class="row clearfix">
+
+            <div class="col-38">
+
+                <div class="section-heading">
+                    <h1 class="desktop-heading">CONNECTING PEOPLE, PURPOSE AND DATA</h1>
+                    <h2>Digital Inventions helps mission-driven organizations unlock the power of data to improve their impact, accountability, and learning. </h2>
+                </div>
+
+                <!--Call to Action-->
+                <a href="#contact" class="button">LET'S WORK TOGETHER</a>
+                <!--End Call to Action-->
+
+            </div>
+
+        </div><!--End of Row-->
+    </header>
+
+    <!--Main Content Area-->
+    <main id="content">
+
+        <!--Introduction-->
+        <section id="about" class="introduction scrollto">
+            <div class="row no-padding-bottom clearfix">
+
+
+
+
+
+
+                <div class="col-61">
+                    <div class="section-heading">
+                        <h3>ABOUT US</h3>
+                        <h2 class="section-title">Digital Inventions at a glance</h2>
+                    </div>
+                    <p>
+                        At Digital Inventions, we believe that the right data, used the right way, can transform how mission-driven organisations learn, grow, and deliver impact.
+                    </p>
+                    <p>
+                        Founded by David Jacobs, who serves as Lead Consultant, Digital Inventions offers deep expertise grounded in two decades of experience in ICT, monitoring and evaluation (M&E), and non-profit leadership. Every project is personally led by David, ensuring a hands-on, thoughtful approach to solving complex data challenges.
+                    </p>
+                    <p>
+                        Digital Inventions works flexibly, drawing on a trusted network of specialist associates and partner organisations when needed. This approach allows us to stay lean and responsive, while bringing in the right expertise to meet the needs of each project.
+                    </p>
+                    <p>
+                        Our strength lies in translating big ideas into practical, usable systems that frontline teams, funders and communities can trust.
+                    </p>
+
+                </div>
+
+                <div class="col-38">
+                    <img src="images/aboutus.png" alt="About Us" />
+                </div>
+
+
+            </div>
+
+
+
+
+        </section>
+        <!--End of Introduction-->
+        <!--Content Section-->
+        <div id="services" class="scrollto clearfix">
+
+            <div class="row clearfix">
+
+                <div class="col-3">
+                    <div class="section-heading">
+                        <h3>SUCCESS</h3>
+                        <h2 class="section-title">How We Help You To Sell Your Product</h2>
+                        <p class="section-subtitle">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!
+                        </p>
+                    </div>
+
+                </div>
+
+                <div class="col-2-3">
+
+                    <!--Icon Block-->
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
+                        <!--Icon-->
+                        <div class="icon">
+                            <i class="fa fa-html5 fa-2x"></i>
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>HTML5 &amp; CSS3</h4>
+                            <p>
+                                Has ne tritani atomorum conclusionemque, in dolorum volumus cotidieque eum. At vis choro
+                                neglegentur iudico
+                            </p>
+                        </div>
+                    </div>
+                    <!--End of Icon Block-->
+                    <!--Icon Block-->
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
+                        <!--Icon-->
+                        <div class="icon">
+                            <i class="fa fa-bolt fa-2x"></i>
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Easy to Use</h4>
+                            <p>
+                                Cu vero ipsum vim, doctus facilisi sea in. Eam ex falli honestatis repudiandae, sit
+                                detracto mediocrem disputationi
+                            </p>
+                        </div>
+                    </div>
+                    <!--End of Icon Block-->
+                    <!--Icon Block-->
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
+                        <!--Icon-->
+                        <div class="icon">
+                            <i class="fa fa-tablet fa-2x"></i>
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Fully Responsive</h4>
+                            <p>
+                                Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
+                                nemore vivendum
+                            </p>
+                        </div>
+                    </div>
+                    <!--End of Icon Block-->
+                    <!--Icon Block-->
+                    <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
+                        <!--Icon-->
+                        <div class="icon">
+                            <i class="fa fa-rocket fa-2x"></i>
+                        </div>
+                        <!--Icon Block Description-->
+                        <div class="icon-block-description">
+                            <h4>Parallax Effect</h4>
+                            <p>
+                                Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
+                                nemore vivendum
+                            </p>
+                        </div>
+                    </div>
+                    <!--End of Icon Block-->
+
+                </div>
+
+            </div>
+
+
+        </div>
+        <!--End of Content Section-->
+        <!--Contact Us-->
+        <section id="contact" class="introduction scrollto">
+            <div class="row no-padding-bottom clearfix">
+
+
+
+
+
+
+                <div class="col-61">
+                    <div class="section-heading">
+                        <h3>BELIEVING</h3>
+                        <h2 class="section-title">Focusing On What Matters Most</h2>
+                        <p class="section-subtitle">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!
+                        </p>
+                    </div>
+                    <p>
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                        totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                        dicta sunt explicabo.
+                    </p>
+                    <p>
+                        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+                        Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet!
+                    </p>
+                    <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
+                    <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
+                        WATCH VIDEO <i class="fa fa-play" aria-hidden="true"></i>
+                    </a>
+                </div>
+
+                <div class="col-38">
+                    <img src="images/dancer.jpg" alt="Dancer" />
+                </div>
+
+
+            </div>
+
+
+
+
+        </section>
+        <!--End of Pricing Tables-->
+
+    </main>
+    <!--End Main Content Area-->
+
+
+    <!--Footer-->
+    <footer id="landing-footer" class="clearfix">
+        <div class="row clearfix">
+
+            <p id="copyright" class="col-2">&copy;2025 - Digital Inventions Consulting (Pty) Ltd. Website design by <a href="https://www.shapingrain.com">ShapingRain</a>.</p>
+
+           
+            <!--End of Social Icons in Footer-->
+        </div>
+    </footer>
+    <!--End of Footer-->
+
+</div>
+
+<!-- Include JavaScript resources -->
+<script src="js/jquery.1.8.3.min.js"></script>
+<script src="js/wow.min.js"></script>
+<script src="js/featherlight.min.js"></script>
+<script src="js/featherlight.gallery.min.js"></script>
+<script src="js/jquery.enllax.min.js"></script>
+<script src="js/jquery.scrollUp.min.js"></script>
+<script src="js/jquery.easing.min.js"></script>
+<script src="js/jquery.stickyNavbar.min.js"></script>
+<script src="js/jquery.waypoints.min.js"></script>
+<script src="js/images-loaded.min.js"></script>
+<script src="js/lightbox.min.js"></script>
+<script src="js/site.js"></script>
+
+
 </body>
 </html>
