--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <a href="#about">About Us</a>
                             </li>
                             <li>
-                                <a href="#services">Our Approach</a>
+                                <a href="#approach">Our Approach</a>
                             </li>
                             <li>
                                 <a href="#services">Our Services</a>
@@ -169,9 +169,7 @@
                     <p>
                         Digital Inventions works flexibly, drawing on a trusted network of specialist associates and partner organisations when needed. This approach allows us to stay lean and responsive, while bringing in the right expertise to meet the needs of each project.
                     </p>
-                    <p>
-                        Our strength lies in translating big ideas into practical, usable systems that frontline teams, funders and communities can trust.
-                    </p>
+
 
                 </div>
 
