--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <h2 class="section-title">Digital Inventions at a glance</h2>
                     </div>
                     <p>
-                        At Digital Inventions, we believe that the right data, used the right way, can transform how mission-driven organisations learn, grow, and deliver impact.
+                        At Digital Inventions, we believe that the right data, used the right way, can transform how non-profit organisations learn, grow, and deliver impact.
                     </p>
                     <p>
                         Founded by David Jacobs, who serves as Lead Consultant, Digital Inventions offers deep expertise grounded in two decades of experience in ICT, monitoring and evaluation (M&E), and non-profit leadership. Every project is personally led by David, ensuring a hands-on, thoughtful approach to solving complex data challenges.
